--- a/raspi/python/settings.json
+++ b/raspi/python/settings.json
@@ -1,1 +1,11 @@
-{"schedule": {"0": [], "1": [{"time": "12:10", "dispense_seconds": 20}], "2": [], "3": [], "4": [{"time": "23:25", "dispense_seconds": 10}], "5": [], "6": []}}
+{
+  "schedule": {
+    "0": [],
+    "1": [],
+    "2": [],
+    "3": [],
+    "4": [],
+    "5": [],
+    "6": []
+  }
+}
