Moved everything to springboot framework

--- a/server/docker/Dockerfile
+++ b/server/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:8
+FROM amazoncorretto:17
 LABEL AUTHOR = "roboter5123"
 COPY Abschlussprojekt.jar app.jar
 ENTRYPOINT ["java","-jar","/app.jar"]
